--- a/posttest/src/main/resources/application.properties
+++ b/posttest/src/main/resources/application.properties
@@ -1,6 +1,15 @@
-server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/<YOUR_DATABASE_NAME>
-spring.datasource.username=<YOUR_USERNAME>
-spring.datasource.password=<YOUR_PASSWORD>
-spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
+server.port=8888
+
+# DataSource Configuration
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+# JPA & Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=password
+logging.level.org.springframework.security=DEBUG
