--- a/posttest/environments/production.env
+++ b/posttest/environments/production.env
@@ -4,6 +4,6 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=lottery
 
 # Lottery Application Environment Variables
-DATABASE_URL=jdbc:postgresql://localhost:5432/lottery
+DATABASE_URL=jdbc:postgresql://postgresql:5432/lottery
 DATABASE_USERNAME=admin
 DATABASE_PASSWORD=password
