--- a/posttest/docker-compose.test.yml
+++ b/posttest/docker-compose.test.yml
@@ -5,7 +5,7 @@ networks:
 
 services:
   postgresql:
-    image: postgresql:latest
+    image: postgres:latest
     restart: on-failure
     env_file:
       - ./environments/beta.env
